@@ -9,6 +9,8 @@ NEXT RELEASE
  - Added o.typeType, o.attributeType, and o.traitType for validating o.js's
    built-in object types.
  - ArrayOfType and ObjectOfType now apply their inner type's coercions.
+ - Renamed o.Constructor to o.Class, because that is what it is and it is
+   less to type.
 
 0.0.8 : 2014-01-03
  - In addition to accepting an Array, o.DuckType now accepts an Object,
